core/target/include/zz/sysinfo_proto.h

typedef enum {
    protonerf_FieldType_Skip = 0,
    protonerf_FieldType_Int32 = 1,
    protonerf_FieldType_Int64 = 2,
    protonerf_FieldType_Uint32 = 3,
    protonerf_FieldType_Uint64 = 4,
    protonerf_FieldType_Sint32 = 5,
    protonerf_FieldType_Sint64 = 6,
    protonerf_FieldType_Bool = 7,
    protonerf_FieldType_Enum = 8,
    protonerf_FieldType_Fixed64 = 9,
    protonerf_FieldType_Sfixed64 = 10,
    protonerf_FieldType_Double = 11,
    protonerf_FieldType_String = 12,
    protonerf_FieldType_Bytes = 13,
    protonerf_FieldType_Message = 14,
    protonerf_FieldType_Repeated = 15,
    protonerf_FieldType_Fixed32 = 16,
    protonerf_FieldType_Sfixed32 = 17,
    protonerf_FieldType_Float = 18,

} protonerf_FieldType;
protonerf_FieldType sysinfo_proto_AuthorizationListTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_DhcpLeaseTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SensorTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Unpublish_Identity = 1,

} sysinfo_proto_Unpublish;
typedef enum {
    sysinfo_proto_Belltower_Current = 1,
    sysinfo_proto_Belltower_Previous = 2,

} sysinfo_proto_Belltower;
protonerf_FieldType sysinfo_proto_PublishTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_NetRoute_Destination = 1,
    sysinfo_proto_NetRoute_Gateway = 2,
    sysinfo_proto_NetRoute_Source = 3,

} sysinfo_proto_NetRoute;
typedef enum {
    sysinfo_proto_GenesisCurrent_Sha256 = 1,
    sysinfo_proto_GenesisCurrent_Commit = 2,
    sysinfo_proto_GenesisCurrent_Data = 3,
    sysinfo_proto_GenesisCurrent_Stable = 4,

} sysinfo_proto_GenesisCurrent;
typedef enum {
    sysinfo_proto_Sensors_Sensors = 1,

} sysinfo_proto_Sensors;
typedef enum {
    sysinfo_proto_Arp_Ip = 1,
    sysinfo_proto_Arp_Hw = 2,
    sysinfo_proto_Arp_Mac = 3,
    sysinfo_proto_Arp_Dev = 4,
    sysinfo_proto_Arp_Value = 5,
    sysinfo_proto_Arp_Null = 6,

} sysinfo_proto_Arp;
protonerf_FieldType sysinfo_proto_NetSurveyTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Alias_Alias = 2,

} sysinfo_proto_Alias;
typedef enum {
    sysinfo_proto_InteractiveAuth_Otp = 1,

} sysinfo_proto_InteractiveAuth;
typedef enum {
    sysinfo_proto_NetAddress_Addr = 1,
    sysinfo_proto_NetAddress_Mask = 2,
    sysinfo_proto_NetAddress_Broadcast = 3,

} sysinfo_proto_NetAddress;
protonerf_FieldType sysinfo_proto_AuthorizationGetTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Path_Ipaddr = 1,
    sysinfo_proto_Path_Category = 2,

} sysinfo_proto_Path;
typedef enum {
    sysinfo_proto_Revoker_Identity = 1,

} sysinfo_proto_Revoker;
typedef enum {
    sysinfo_proto_ConnectRequest__TargetType_Identity = 0,
    sysinfo_proto_ConnectRequest__TargetType_Alias = 1,

} sysinfo_proto_ConnectRequest__TargetType;
typedef enum {
    sysinfo_proto_ClusterShard_This = 1,
    sysinfo_proto_ClusterShard_Other = 2,

} sysinfo_proto_ClusterShard;
protonerf_FieldType sysinfo_proto_ClusterShardTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_ClaimOne_Target = 1,
    sysinfo_proto_ClaimOne_Resources = 2,

} sysinfo_proto_ClaimOne;
typedef enum {
    sysinfo_proto_PublishChange_Supersede = 1,
    sysinfo_proto_PublishChange_Alias = 2,

} sysinfo_proto_PublishChange;
typedef enum {
    sysinfo_proto_PublishRequest_Unused = 1,
    sysinfo_proto_PublishRequest_Network = 2,
    sysinfo_proto_PublishRequest_ReceiveAlias = 3,

} sysinfo_proto_PublishRequest;
protonerf_FieldType sysinfo_proto_UnameTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Location_Latitude = 1,
    sysinfo_proto_Location_Longitude = 2,
    sysinfo_proto_Location_Altitude = 3,
    sysinfo_proto_Location_Fix = 4,
    sysinfo_proto_Location_Accuracity = 5,
    sysinfo_proto_Location_Satellites = 6,
    sysinfo_proto_Location_Velocity = 7,

} sysinfo_proto_Location;
typedef enum {
    sysinfo_proto_ConfigResult_Ok = 1,
    sysinfo_proto_ConfigResult_Error = 2,

} sysinfo_proto_ConfigResult;
protonerf_FieldType sysinfo_proto_ConfigResultTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_FilterByRole_Roles = 1,

} sysinfo_proto_FilterByRole;
typedef enum {
    sysinfo_proto_Bootloader_ActiveSide = 1,
    sysinfo_proto_Bootloader_BootReason = 2,

} sysinfo_proto_Bootloader;
typedef enum {
    sysinfo_proto_InnerTraceResponse_Invalid = 1,
    sysinfo_proto_InnerTraceResponse_Pong = 2,

} sysinfo_proto_InnerTraceResponse;
protonerf_FieldType sysinfo_proto_LoadTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Authorization_Identity = 1,
    sysinfo_proto_Authorization_Resource = 2,

} sysinfo_proto_Authorization;
protonerf_FieldType sysinfo_proto_AuthListResultTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_NetworkGetResult_Address = 2,

} sysinfo_proto_NetworkGetResult;
protonerf_FieldType sysinfo_proto_TraceShadowTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_PublishChangeTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_AuthorizationDelTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Certificate_LastValidEpoch = 1,
    sysinfo_proto_Certificate_Identity = 2,
    sysinfo_proto_Certificate_Authority = 3,
    sysinfo_proto_Certificate_Serial = 4,
    sysinfo_proto_Certificate_Claims = 5,

} sysinfo_proto_Certificate;
protonerf_FieldType sysinfo_proto_CertificateTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_NoneTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_InnerTraceRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SysinfoTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_FileSystemTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_NetworkJoinTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ConnectRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ConnectResponseTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Mem_Total = 1,
    sysinfo_proto_Mem_Free = 2,
    sysinfo_proto_Mem_Available = 3,

} sysinfo_proto_Mem;
protonerf_FieldType sysinfo_proto_AuthorizationTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_LocationVelocityTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_TraceRequest_Target = 1,

} sysinfo_proto_TraceRequest;
protonerf_FieldType sysinfo_proto_InnerTraceResponseTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Location__Fix_None = 0,
    sysinfo_proto_Location__Fix_Gps = 1,
    sysinfo_proto_Location__Fix_DGps = 2,
    sysinfo_proto_Location__Fix_Pps = 3,
    sysinfo_proto_Location__Fix_Rtk = 4,
    sysinfo_proto_Location__Fix_FloatRtk = 5,
    sysinfo_proto_Location__Fix_Estimated = 6,
    sysinfo_proto_Location__Fix_Manual = 7,
    sysinfo_proto_Location__Fix_Simulation = 8,

} sysinfo_proto_Location__Fix;
protonerf_FieldType sysinfo_proto_LocationAccuracityTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_PeerConnectResponseTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Arp__HwType_Unknown = 0,
    sysinfo_proto_Arp__HwType_Ethernet = 1,

} sysinfo_proto_Arp__HwType;
protonerf_FieldType sysinfo_proto_PeerConnectRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_GenesisCurrentTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Path__Category_Invalid = 0,
    sysinfo_proto_Path__Category_Local = 1,
    sysinfo_proto_Path__Category_Internet = 2,
    sysinfo_proto_Path__Category_BrokerOrigin = 3,

} sysinfo_proto_Path__Category;
protonerf_FieldType sysinfo_proto_DiscoveryResponseTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_ClusterState_Config = 1,

} sysinfo_proto_ClusterState;
protonerf_FieldType sysinfo_proto_FilterTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_EmptyTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_Sensor__ValueType_None = 0,
    sysinfo_proto_Sensor__ValueType_MilliCelsius = 1,

} sysinfo_proto_Sensor__ValueType;
protonerf_FieldType sysinfo_proto_NetdevTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_AuthorizationAddTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_NetRouteTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ClusterConfigTypes (uintptr_t const  index);
typedef enum {
    sysinfo_proto_ProtoHeader_Len = 1,

} sysinfo_proto_ProtoHeader;
protonerf_FieldType sysinfo_proto_ConfirmationTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_AliasTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_MemTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SwitchTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_TraceRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_BootloaderTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_PublishRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SatelliteTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ClusterStateTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SubscribeRequestTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SwitchPortTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ClaimTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_SubscribeChangeTypes (uintptr_t const  index);
protonerf_FieldType sysinfo_proto_ExceptionalRouteTypes (uintptr_t const  index);