core/snapshot/target/rust/sysinfo_proto.rs


#[derive(Clone)]
#[repr(C)]
pub enum GenesisCurrent {
    sysinfo_proto_GenesisCurrent_Sha256 = 1,
    sysinfo_proto_GenesisCurrent_Commitmsg = 2,
    sysinfo_proto_GenesisCurrent_Stable = 3,
    sysinfo_proto_GenesisCurrent_Contentsize = 4,

}

#[derive(Clone)]
#[repr(C)]
pub enum Authorization {
    sysinfo_proto_Authorization_Identity = 1,
    sysinfo_proto_Authorization_Resource = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum NetAddress {
    sysinfo_proto_NetAddress_Addr = 1,
    sysinfo_proto_NetAddress_Mask = 2,
    sysinfo_proto_NetAddress_Broadcast = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum Location__Fix {
    sysinfo_proto_Location__Fix_None = 0,
    sysinfo_proto_Location__Fix_Gps = 1,
    sysinfo_proto_Location__Fix_DGps = 2,
    sysinfo_proto_Location__Fix_Pps = 3,
    sysinfo_proto_Location__Fix_Rtk = 4,
    sysinfo_proto_Location__Fix_FloatRtk = 5,
    sysinfo_proto_Location__Fix_Estimated = 6,
    sysinfo_proto_Location__Fix_Manual = 7,
    sysinfo_proto_Location__Fix_Simulation = 8,

}

#[derive(Clone)]
#[repr(C)]
pub enum Certificate {
    sysinfo_proto_Certificate_LastValidEpoch = 1,
    sysinfo_proto_Certificate_Identity = 2,
    sysinfo_proto_Certificate_Authority = 3,
    sysinfo_proto_Certificate_Serial = 4,
    sysinfo_proto_Certificate_Claims = 5,

}

#[derive(Clone)]
#[repr(C)]
pub enum NetRoute {
    sysinfo_proto_NetRoute_Destination = 1,
    sysinfo_proto_NetRoute_Gateway = 2,
    sysinfo_proto_NetRoute_Source = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum Arp {
    sysinfo_proto_Arp_Ip = 1,
    sysinfo_proto_Arp_Hw = 2,
    sysinfo_proto_Arp_Mac = 3,
    sysinfo_proto_Arp_Dev = 4,
    sysinfo_proto_Arp_Value = 5,
    sysinfo_proto_Arp_Null = 6,

}

#[derive(Clone)]
#[repr(C)]
pub enum Mem {
    sysinfo_proto_Mem_Total = 1,
    sysinfo_proto_Mem_Free = 2,
    sysinfo_proto_Mem_Available = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum ClusterShard {
    sysinfo_proto_ClusterShard_This = 1,
    sysinfo_proto_ClusterShard_Other = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Bootloader {
    sysinfo_proto_Bootloader_ActiveSide = 1,
    sysinfo_proto_Bootloader_BootReason = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Revoker {
    sysinfo_proto_Revoker_Identity = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum ClusterState {
    sysinfo_proto_ClusterState_Config = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Sensors {
    sysinfo_proto_Sensors_Sensors = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Unpublish {
    sysinfo_proto_Unpublish_Identity = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum FilterByRole {
    sysinfo_proto_FilterByRole_Roles = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum InteractiveAuth {
    sysinfo_proto_InteractiveAuth_Otp = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum ProtoHeader {
    sysinfo_proto_ProtoHeader_Len = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum NetworkGetResult {
    sysinfo_proto_NetworkGetResult_Address = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum ConnectRequest__TargetType {
    sysinfo_proto_ConnectRequest__TargetType_Identity = 0,
    sysinfo_proto_ConnectRequest__TargetType_Alias = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum InnerTraceResponse {
    sysinfo_proto_InnerTraceResponse_Invalid = 1,
    sysinfo_proto_InnerTraceResponse_Pong = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Path {
    sysinfo_proto_Path_Ipaddr = 1,
    sysinfo_proto_Path_Category = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum ClaimOne {
    sysinfo_proto_ClaimOne_Target = 1,
    sysinfo_proto_ClaimOne_Resources = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Location {
    sysinfo_proto_Location_Latitude = 1,
    sysinfo_proto_Location_Longitude = 2,
    sysinfo_proto_Location_Altitude = 3,
    sysinfo_proto_Location_Fix = 4,
    sysinfo_proto_Location_Accuracity = 5,
    sysinfo_proto_Location_Satellites = 6,
    sysinfo_proto_Location_Velocity = 7,

}

#[derive(Clone)]
#[repr(C)]
pub enum PublishRequest {
    sysinfo_proto_PublishRequest_Unused = 1,
    sysinfo_proto_PublishRequest_Network = 2,
    sysinfo_proto_PublishRequest_ReceiveAlias = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum ConfigResult {
    sysinfo_proto_ConfigResult_Ok = 1,
    sysinfo_proto_ConfigResult_Error = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum TraceRequest {
    sysinfo_proto_TraceRequest_Target = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum PublishChange {
    sysinfo_proto_PublishChange_Supersede = 1,
    sysinfo_proto_PublishChange_Alias = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Alias {
    sysinfo_proto_Alias_Alias = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Belltower {
    sysinfo_proto_Belltower_Current = 1,
    sysinfo_proto_Belltower_Previous = 2,

}

#[derive(Clone)]
#[repr(C)]
pub enum Path__Category {
    sysinfo_proto_Path__Category_Invalid = 0,
    sysinfo_proto_Path__Category_Local = 1,
    sysinfo_proto_Path__Category_Internet = 2,
    sysinfo_proto_Path__Category_BrokerOrigin = 3,

}

#[derive(Clone)]
#[repr(C)]
pub enum Sensor__ValueType {
    sysinfo_proto_Sensor__ValueType_None = 0,
    sysinfo_proto_Sensor__ValueType_MilliCelsius = 1,

}

#[derive(Clone)]
#[repr(C)]
pub enum Arp__HwType {
    sysinfo_proto_Arp__HwType_Unknown = 0,
    sysinfo_proto_Arp__HwType_Ethernet = 1,

}


pub mod heap {
}
extern {








    #[link_name = "sysinfo_proto_AuthListResultTypes"]
    pub fn r#AuthListResultTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_SatelliteTypes"]
    pub fn r#SatelliteTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_DiscoveryResponseTypes"]
    pub fn r#DiscoveryResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_NetSurveyTypes"]
    pub fn r#NetSurveyTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "sysinfo_proto_AuthorizationGetTypes"]
    pub fn r#AuthorizationGetTypes( Zindex: usize)  -> super::protonerf::FieldType;







    #[link_name = "sysinfo_proto_PeerConnectRequestTypes"]
    pub fn r#PeerConnectRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;







    #[link_name = "sysinfo_proto_PeerConnectResponseTypes"]
    pub fn r#PeerConnectResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_SwitchPortTypes"]
    pub fn r#SwitchPortTypes( Zindex: usize)  -> super::protonerf::FieldType;













    #[link_name = "sysinfo_proto_ConfirmationTypes"]
    pub fn r#ConfirmationTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_ClusterConfigTypes"]
    pub fn r#ClusterConfigTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ConnectRequestTypes"]
    pub fn r#ConnectRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;




    #[link_name = "sysinfo_proto_LoadTypes"]
    pub fn r#LoadTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_PublishTypes"]
    pub fn r#PublishTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "sysinfo_proto_GenesisCurrentTypes"]
    pub fn r#GenesisCurrentTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_AuthorizationTypes"]
    pub fn r#AuthorizationTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_NoneTypes"]
    pub fn r#NoneTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_TraceShadowTypes"]
    pub fn r#TraceShadowTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_SwitchTypes"]
    pub fn r#SwitchTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "sysinfo_proto_ExceptionalRouteTypes"]
    pub fn r#ExceptionalRouteTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_FileSystemTypes"]
    pub fn r#FileSystemTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "sysinfo_proto_LocationVelocityTypes"]
    pub fn r#LocationVelocityTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_NetRouteTypes"]
    pub fn r#NetRouteTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_ClusterShardTypes"]
    pub fn r#ClusterShardTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "sysinfo_proto_BootloaderTypes"]
    pub fn r#BootloaderTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_EmptyTypes"]
    pub fn r#EmptyTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_CertificateTypes"]
    pub fn r#CertificateTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_ClusterStateTypes"]
    pub fn r#ClusterStateTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_AuthorizationAddTypes"]
    pub fn r#AuthorizationAddTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_SubscribeRequestTypes"]
    pub fn r#SubscribeRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_UnameTypes"]
    pub fn r#UnameTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_AuthorizationListTypes"]
    pub fn r#AuthorizationListTypes( Zindex: usize)  -> super::protonerf::FieldType;







    #[link_name = "sysinfo_proto_InnerTraceResponseTypes"]
    pub fn r#InnerTraceResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_NetworkJoinTypes"]
    pub fn r#NetworkJoinTypes( Zindex: usize)  -> super::protonerf::FieldType;




    #[link_name = "sysinfo_proto_PublishRequestTypes"]
    pub fn r#PublishRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_InnerTraceRequestTypes"]
    pub fn r#InnerTraceRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;



    #[link_name = "sysinfo_proto_TraceRequestTypes"]
    pub fn r#TraceRequestTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_PublishChangeTypes"]
    pub fn r#PublishChangeTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_AliasTypes"]
    pub fn r#AliasTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_SensorTypes"]
    pub fn r#SensorTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_MemTypes"]
    pub fn r#MemTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_AuthorizationDelTypes"]
    pub fn r#AuthorizationDelTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ClaimTypes"]
    pub fn r#ClaimTypes( Zindex: usize)  -> super::protonerf::FieldType;


    #[link_name = "sysinfo_proto_DhcpLeaseTypes"]
    pub fn r#DhcpLeaseTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_SubscribeChangeTypes"]
    pub fn r#SubscribeChangeTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ConfigResultTypes"]
    pub fn r#ConfigResultTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_FilterTypes"]
    pub fn r#FilterTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_SysinfoTypes"]
    pub fn r#SysinfoTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_NetdevTypes"]
    pub fn r#NetdevTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_LocationAccuracityTypes"]
    pub fn r#LocationAccuracityTypes( Zindex: usize)  -> super::protonerf::FieldType;

    #[link_name = "sysinfo_proto_ConnectResponseTypes"]
    pub fn r#ConnectResponseTypes( Zindex: usize)  -> super::protonerf::FieldType;
